# cattle-prod

./: .gitignore  README.md
cattle-prod/: Cargo.toml
cattle-prod/crates/cattle-prod-cli/: Cargo.toml
cattle-prod/crates/cattle-prod-cli/src/: main.rs
cattle-prod/crates/cattle-prod-core/: Cargo.toml
cattle-prod/crates/cattle-prod-core/src/: config.rs  constants.rs  lib.rs  residue.rs  token.rs  types.rs
cattle-prod/crates/cattle-prod-core/tests/: integration_test.rs
cattle-prod/crates/cattle-prod-data/: Cargo.toml
cattle-prod/crates/cattle-prod-data/benches/: parser_bench.rs
cattle-prod/crates/cattle-prod-data/src/: atom_array.rs  dumper.rs  featurizer.rs  inference.rs  lib.rs  metrics.rs  msa.rs  parser.rs  template.rs  tokenizer.rs
cattle-prod/crates/cattle-prod-data/tests/: integration_test.rs
cattle-prod/crates/cattle-prod-kernels/: Cargo.toml
cattle-prod/crates/cattle-prod-kernels/src/: fused_dropout.rs  layer_norm.rs  lib.rs  triangle_attention.rs  triangle_mul.rs
cattle-prod/crates/cattle-prod-model/: Cargo.toml
cattle-prod/crates/cattle-prod-model/src/: attention.rs  cattle_prod.rs  confidence.rs  diffusion.rs  embedders.rs  frames.rs  generator.rs  heads.rs  lib.rs  pairformer.rs  primitives.rs  sample_confidence.rs  transformer.rs  triangular.rs
cattle-prod/crates/cattle-prod-model/tests/: model_test.rs
cattle-prod/scripts/: checkpoint_keymap.py  convert_weights.py
cattle-prod/scripts/tests/: test_convert_weights.py
