[workspace]
members = [
    "crates/cattle-prod-core",
    "crates/cattle-prod-data",
    "crates/cattle-prod-model",
    "crates/cattle-prod-kernels",
    "crates/cattle-prod-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
cattle-prod-core = { path = "crates/cattle-prod-core" }
cattle-prod-data = { path = "crates/cattle-prod-data" }
cattle-prod-model = { path = "crates/cattle-prod-model" }
cattle-prod-kernels = { path = "crates/cattle-prod-kernels" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
ndarray = { version = "0.16", features = ["serde"] }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
half = { version = "2", features = ["serde"] }
safetensors = "0.4"
