[package]
name = "cattle-prod-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cattle-prod"
path = "src/main.rs"

[features]
cuda = []

[dependencies]
cattle-prod-core = { workspace = true }
cattle-prod-data = { workspace = true }
cattle-prod-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
ndarray = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
half = { workspace = true }
safetensors = { workspace = true }
