[package]
name = "cattle-prod-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
log = { workspace = true }
half = { workspace = true }
