[package]
name = "cattle-prod-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cattle-prod-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
regex-lite = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false
