[package]
name = "cattle-prod-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cattle-prod-core = { workspace = true }
cattle-prod-kernels = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
log = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
half = { workspace = true }
safetensors = { workspace = true }
